--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,33 @@
-# Ambiente virtual
-venv/
-
-# Arquivos Python
+# Python
 __pycache__/
 *.py[cod]
-*.pyo
-*.pyd
+*$py.class
+*.so
 .Python
+venv/
+ENV/
+.venv/
 
-# Banco de dados local
-*.sqlite3
+# Django
+*.log
+local_settings.py
 db.sqlite3
+staticfiles/
 
-# Arquivos de ambiente
+# Ambiente
 .env
+.env.local
 
-# Uploads de usuários
-media/
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
 
-# Arquivos do sistema
+# Sistema
 .DS_Store
 Thumbs.db
 
-# IDE
-.vscode/
-.idea/
-
-# Arquivos estáticos coletados
-staticfiles/
+# Mídia (uploads) - não versionar em produção
+# media/fotos_oficiais/*
+# !media/fotos_oficiais/.gitkeep
