--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
-Django>=4.2,<5.0
-psycopg2-binary>=2.9.9
-gunicorn>=21.2.0
-whitenoise>=6.6.0
-dj-database-url>=2.1.0
-python-dotenv>=1.0.0
-Pillow>=10.0.0
-openpyxl>=3.1.2
-reportlab>=4.0.0
-django-htmx>=1.17.0
+asgiref==3.11.0
+charset-normalizer==3.4.4
+Django==6.0.1
+django-htmx==1.27.0
+et_xmlfile==2.0.0
+openpyxl==3.1.5
+pillow==12.1.0
+psycopg2-binary==2.9.11
+python-decouple==3.8
+reportlab==4.4.9
+sqlparse==0.5.5
+whitenoise==6.11.0
